# m2

./: .gitattributes  .gitignore  README.md  hello.monkey  hello.monkey2  notes.txt  oscin.monkey2  test2.monkey2
applet/: applet.monkey2
autoimport/: csimport.monkey2  listimports.monkey2
bananastand/: bananastand.monkey2
bigted/: bigted.monkey2  buildmac.sh  buildpi.sh  debugpi.sh  debugview.monkey2  helpview.monkey2  imgdocument.monkey2  mainwindow.monkey2  mx2document.monkey2  mx2highlighter.monkey2  searchdialog.monkey2  searchdialog2.monkey2
bootstrap/: CMakeLists.txt  buildpi.sh
bootstrap/mx2cc.1.00/: mx2cc_builder.cpp  mx2cc_class.h  mx2cc_docs_2docsmaker.h  mx2cc_docs_2jsonbuffer.cpp  mx2cc_docs_2jsonbuffer.h  mx2cc_docs_2markdownbuffer.cpp  mx2cc_docs_2markdownbuffer.h  mx2cc_errors.cpp  mx2cc_errors.h  mx2cc_eval.cpp  mx2cc_expr.cpp  mx2cc_func.cpp  mx2cc_monkey_math.cpp  mx2cc_mung.h  mx2cc_mx2.cpp  mx2cc_namespace.cpp  mx2cc_overload.h  mx2cc_parser.h  mx2cc_property.cpp  mx2cc_property.h  mx2cc_scope.h  mx2cc_std_collections_2container.cpp  mx2cc_std_collections_2map.cpp  mx2cc_stmt.cpp  mx2cc_stmtexpr.h  mx2cc_translator.cpp  mx2cc_type.cpp  mx2cc_type.h  mx2cc_typeexpr.h  mx2cc_util.h  mx2cc_value.cpp  mx2cc_var.h
bootstrap/scripts/: pimods.sh
bricks/: vbrick.monkey2
emoji/: applet.monkey2  emoji.monkey2
ffmpeg/: README.md
gif64/: COPYRIGHT  README.md  gif.bmx  gif.h  gif.monkey2  gifencod.c  main.c  readGIF.c  readgif.bmx  readgif.cpp  wrgif.c  writegif.bmx  writegif.c  writegif2.c  writegif3.c
httprequest/: httprequest.monkey2
irc/: irc.monkey2
listimports/: listimports.monkey2
mx2cc.1.00/: mx2cc_alias.cpp  mx2cc_alias.h  mx2cc_balance.cpp  mx2cc_balance.h  mx2cc_builder.h  mx2cc_class.cpp  mx2cc_decl.cpp  mx2cc_decl.h  mx2cc_docs_2docsmaker.cpp  mx2cc_enum.cpp  mx2cc_enum.h  mx2cc_eval.h  mx2cc_expr.h  mx2cc_func.h  mx2cc_module.cpp  mx2cc_module.h  mx2cc_monkey_math.h  mx2cc_mung.cpp  mx2cc_mx2.h  mx2cc_mx2cc.cpp  mx2cc_mx2cc.h  mx2cc_namespace.h  mx2cc_node.cpp  (+21 more)
(+243 files in other folders)
